@@ -1,3 +1,16 @@
+        Release Notes - Ikasan - Version 0.8.3
+
+<h2>        Bug
+</h2>
+<ul>
+<li>[<a href='http://open.jira.com/browse/IKASAN-582'>IKASAN-582</a>] -         (S)FTP endpoint factories must validate the incoming configuration objects
+</li>
+<li>[<a href='http://open.jira.com/browse/IKASAN-595'>IKASAN-595</a>] -         (S)FTP connector renaming files in incorrect order on commit, even when delivering files in correct order
+</li>
+<li>[<a href='http://open.jira.com/browse/IKASAN-599'>IKASAN-599</a>] -         HibernateErrorOccurrenceDao is to verbose in its logging
+</li>
+</ul>
+
         Release Notes - Ikasan - Version 0.8.2
 
 <h2>        Improvement
